Fix quick mod tools on mobile devices

--- a/style/theme/layout_responsive.css
+++ b/style/theme/layout_responsive.css
@@ -155,7 +155,9 @@
 		-webkit-box-sizing: border-box;
 	}
 	.autowidth { width: 98% !important; max-width: 240px !important; }
-	
+
+	fieldset.quickmod { width: auto; }
+
 	/* tabs */
 	div.dropdown-tabs { 
 		float: none;
